modification html css

--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
     <title>Accueil-ohmyfood</title>
   </head>
   <body>
+    <div class="loader">
+      <div class="loader__conteneur">
+        <div class="loader__conteneur1"></div>
+        <div class="loader__conteneur2"></div>
+        <div class="loader__conteneur3"></div>
+      </div>
+    </div>
     <!-- Header -->
     <header>
       <!--title-->
@@ -156,14 +163,10 @@
           </a>
         </div>
         <div>
-          <a href="#">
-            <span>Montion légales</span>
-          </a>
+          <a href="#">Montion légales</a>
         </div>
         <div>
-          <a href="#">
-            <span>Contact</span>
-          </a>
+          <a href="http://rabah@ohmyfood.com"> Contact </a>
         </div>
       </div>
     </footer>
