--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -60,7 +60,14 @@
               <h4>Fricassée d'escargot</h4>
               <div class="page__menu__stitre">
                 <p>Au piment d'Espelette</p>
-                <span class="page__menu__mony">25€</span>
+                <div class="page__menu__mony">
+                  25€
+                  <div class="page__menu__confirmation">
+                    <div class="cercle">
+                      <i class="fa-solid fa-check"></i>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </li>
