modification html et css

--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -148,9 +148,9 @@
     </main>
     <footer>
       <div class="footer">
-        <a class="footer-log" href="#">
+        <div class="footer-log" href="#">
           <img src="images/logo/ohmyfood.png" height="20" alt="Logo" />
-        </a>
+        </div>
         <div>
           <a href="#">
             <span><i class="fa-solid fa-utensils"></i></span>
