--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
                     <div class="cover__content__arrondissement">Ménilmontant</div>
                   </div>
                   <span class="cover__content__coeur"><i class="fa-regular fa-heart"></i></span>
+                  <span class="cover__content__coeur0"><i class="fa-solid fa-heart"></i></span>
                 </div>
               </a>
             </li>
@@ -109,6 +110,7 @@
                     <div class="cover__content__arrondissement">Charonne</div>
                   </div>
                   <span class="cover__content__coeur"><i class="fa-regular fa-heart"></i></span>
+                  <span class="cover__content__coeur0"><i class="fa-solid fa-heart"></i></span>
                 </div>
               </a>
             </li>
@@ -124,6 +126,7 @@
                     <div class="cover__content__arrondissement">Cité Rouge</div>
                   </div>
                   <span class="cover__content__coeur"><i class="fa-regular fa-heart"></i></span>
+                  <span class="cover__content__coeur0"><i class="fa-solid fa-heart"></i></span>
                 </div>
               </a>
             </li>
@@ -138,6 +141,7 @@
                     <div class="cover__content__arrondissement">Folie-Méricourt</div>
                   </div>
                   <span class="cover__content__coeur"><i class="fa-regular fa-heart"></i></span>
+                  <span class="cover__content__coeur0"><i class="fa-solid fa-heart"></i></span>
                 </div>
               </a>
             </li>
@@ -147,9 +151,9 @@
     </main>
     <footer>
       <div class="footer">
-        <a class="footer-log" href="#">
+        <div class="footer-log" href="#">
           <img src="images/logo/ohmyfood.png" height="20" alt="Logo" />
-        </a>
+        </div>
         <div>
           <a href="#">
             <span><i class="fa-solid fa-utensils"></i></span>
