--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -157,9 +157,9 @@
 
     <footer>
       <div class="footer">
-        <a class="footer-log" href="#">
+        <div class="footer-log" href="#">
           <img src="images/logo/ohmyfood.png" height="20" alt="Logo" />
-        </a>
+        </div>
         <div>
           <a href="#">
             <span><i class="fa-solid fa-utensils"></i></span>
