--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -161,9 +161,9 @@
     </main>
     <footer>
       <div class="footer">
-        <a class="footer-log" href="#">
+        <div class="footer-log" href="#">
           <img src="images/logo/ohmyfood.png" height="20" alt="Logo" />
-        </a>
+        </div>
         <div>
           <a href="#">
             <span><i class="fa-solid fa-utensils"></i></span>
