Modif animation -html

--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -57,7 +57,14 @@
               <h4>Tartare de poulpe acidulé</h4>
               <div class="page__menu__stitre">
                 <p>Aux zestes d'orange</p>
-                <span class="page__menu__mony">25€</span>
+                <div class="page__menu__mony">
+                  25€
+                  <div class="page__menu__confirmation">
+                    <div class="cercle">
+                      <i class="fa-solid fa-check"></i>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </li>
@@ -66,7 +73,14 @@
               <h4>Velouté de légumes d'antan</h4>
               <div class="page__menu__stitre">
                 <p>Carotte, panais, topinambour</p>
-                <span class="page__menu__mony">35€</span>
+                <div class="page__menu__mony">
+                  35€
+                  <div class="page__menu__confirmation">
+                    <div class="cercle">
+                      <i class="fa-solid fa-check"></i>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </li>
@@ -75,7 +89,14 @@
               <h4>Soupe à l'oignon</h4>
               <div class="page__menu__stitre">
                 <p>Revisitée</p>
-                <span class="page__menu__mony">20€</span>
+                <div class="page__menu__mony">
+                  20€
+                  <div class="page__menu__confirmation">
+                    <div class="cercle">
+                      <i class="fa-solid fa-check"></i>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </li>
@@ -87,7 +108,14 @@
               <h4>Coquilles Saint-Jacques</h4>
               <div class="page__menu__stitre">
                 <p>Accompagnées d'une purée de panais</p>
-                <span class="page__menu__mony">40€</span>
+                <div class="page__menu__mony">
+                  40€
+                  <div class="page__menu__confirmation">
+                    <div class="cercle">
+                      <i class="fa-solid fa-check"></i>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </li>
@@ -96,7 +124,14 @@
               <h4>Magret de canard</h4>
               <div class="page__menu__stitre">
                 <p>Et parmentier de pommes de terre</p>
-                <span class="page__menu__mony">35€</span>
+                <div class="page__menu__mony">
+                  35€
+                  <div class="page__menu__confirmation">
+                    <div class="cercle">
+                      <i class="fa-solid fa-check"></i>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </li>
@@ -105,7 +140,14 @@
               <h4>Pigeonneau d’Ille-et-Vilaine</h4>
               <div class="page__menu__stitre">
                 <p>Sur son lit de gnocchis aux légumes</p>
-                <span class="page__menu__mony">44€</span>
+                <div class="page__menu__mony">
+                  44€
+                  <div class="page__menu__confirmation">
+                    <div class="cercle">
+                      <i class="fa-solid fa-check"></i>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </li>
@@ -118,7 +160,14 @@
               <h4>Pétales de violettes glacés</h4>
               <div class="page__menu__stitre">
                 <p>Et purée de noisettes</p>
-                <span class="page__menu__mony">18€</span>
+                <div class="page__menu__mony">
+                  18€
+                  <div class="page__menu__confirmation">
+                    <div class="cercle">
+                      <i class="fa-solid fa-check"></i>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </li>
@@ -127,7 +176,14 @@
               <h4>Fondant au chocolat</h4>
               <div class="page__menu__stitre">
                 <p>Revisité</p>
-                <span class="page__menu__mony">22€</span>
+                <div class="page__menu__mony">
+                  22€
+                  <div class="page__menu__confirmation">
+                    <div class="cercle">
+                      <i class="fa-solid fa-check"></i>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </li>
@@ -136,7 +192,14 @@
               <h4>Millefeuille croustillant</h4>
               <div class="page__menu__stitre">
                 <p>Myrtilles et pâte d’amande</p>
-                <span class="page__menu__mony">23€</span>
+                <div class="page__menu__mony">
+                  23€
+                  <div class="page__menu__confirmation">
+                    <div class="cercle">
+                      <i class="fa-solid fa-check"></i>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </li>
@@ -148,7 +211,7 @@
     </main>
     <footer>
       <div class="footer">
-        <div class="footer-log" href="#">
+        <div class="footer-log">
           <img src="images/logo/ohmyfood.png" height="20" alt="Logo" />
         </div>
         <div>
