--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     </main>
     <footer>
       <div class="footer">
-        <div class="footer-log" href="#">
+        <div class="footer-log">
           <img src="images/logo/ohmyfood.png" height="20" alt="Logo" />
         </div>
         <div>
