--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -57,7 +57,14 @@
               <h4>Ravioles de foie gras</h4>
               <div class="page__menu__stitre">
                 <p>Accompagnés de leur crème à la truffe</p>
-                <span class="page__menu__mony">25€</span>
+                <div class="page__menu__mony">
+                  25€
+                  <div class="page__menu__confirmation">
+                    <div class="cercle">
+                      <i class="fa-solid fa-check"></i>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </li>
@@ -65,8 +72,15 @@
             <div class="page__menu__titre">
               <h4>Caviar osciètre</h4>
               <div class="page__menu__stitre">
-                <p class: page__menu p>Sur blini à la farine de blé noir</p>
-                <span class="page__menu__mony">35€</span>
+                <p>Sur blini à la farine de blé noir</p>
+                <div class="page__menu__mony">
+                  35€
+                  <div class="page__menu__confirmation">
+                    <div class="cercle">
+                      <i class="fa-solid fa-check"></i>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </li>
@@ -74,8 +88,15 @@
             <div class="page__menu__titre">
               <h4>Homard et espuma de potiron</h4>
               <div class="page__menu__stitre">
-                <p class: page__menu p>Mariné aux zestes d'orange</p>
-                <span class="page__menu__mony">20€</span>
+                <p>Mariné aux zestes d'orange</p>
+                <div class="page__menu__mony">
+                  20€
+                  <div class="page__menu__confirmation">
+                    <div class="cercle">
+                      <i class="fa-solid fa-check"></i>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </li>
@@ -83,8 +104,15 @@
             <div class="page__menu__titre">
               <h4>Foie gras de canard cuit entier</h4>
               <div class="page__menu__stitre">
-                <p class: page__menu p>Confiture de figue et pain toasté</p>
-                <span class="page__menu__mony">35€</span>
+                <p>Confiture de figue et pain toasté</p>
+                <div class="page__menu__mony">
+                  35€
+                  <div class="page__menu__confirmation">
+                    <div class="cercle">
+                      <i class="fa-solid fa-check"></i>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </li>
@@ -95,8 +123,15 @@
             <div class="page__menu__titre">
               <h4>Noix de coquilles Saint-Jacques</h4>
               <div class="page__menu__stitre">
-                <p class: page__menu p>Sur lit de purée de céleri-rave</p>
-                <span class="page__menu__mony">40€</span>
+                <p>Sur lit de purée de céleri-rave</p>
+                <div class="page__menu__mony">
+                  40€
+                  <div class="page__menu__confirmation">
+                    <div class="cercle">
+                      <i class="fa-solid fa-check"></i>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </li>
@@ -104,8 +139,15 @@
             <div class="page__menu__titre">
               <h4>Langoustine poêlée</h4>
               <div class="page__menu__stitre">
-                <p class: page__menu p>Purée de patate douce</p>
-                <span class="page__menu__mony">35€</span>
+                <p>Purée de patate douce</p>
+                <div class="page__menu__mony">
+                  35€
+                  <div class="page__menu__confirmation">
+                    <div class="cercle">
+                      <i class="fa-solid fa-check"></i>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </li>
@@ -113,8 +155,15 @@
             <div class="page__menu__titre">
               <h4>Mijoté de queue de boeuf</h4>
               <div class="page__menu__stitre">
-                <p class: page__menu p>Et riz sauvage aux zestes de citron</p>
-                <span class="page__menu__mony">44€</span>
+                <p>Et riz sauvage aux zestes de citron</p>
+                <div class="page__menu__mony">
+                  44€
+                  <div class="page__menu__confirmation">
+                    <div class="cercle">
+                      <i class="fa-solid fa-check"></i>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </li>
@@ -125,8 +174,15 @@
             <div class="page__menu__titre">
               <h4>Macaron noisette et chocolat</h4>
               <div class="page__menu__stitre">
-                <p class: page__menu p>Revisité</p>
-                <span class="page__menu__mony">18€</span>
+                <p>Revisité</p>
+                <div class="page__menu__mony">
+                  18€
+                  <div class="page__menu__confirmation">
+                    <div class="cercle">
+                      <i class="fa-solid fa-check"></i>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </li>
@@ -134,8 +190,15 @@
             <div class="page__menu__titre">
               <h4>Baba au rhum revisité</h4>
               <div class="page__menu__stitre">
-                <p class: page__menu p>Avec son coulis de citron</p>
-                <span class="page__menu__mony">22€</span>
+                <p>Avec son coulis de citron</p>
+                <div class="page__menu__mony">
+                  22€
+                  <div class="page__menu__confirmation">
+                    <div class="cercle">
+                      <i class="fa-solid fa-check"></i>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </li>
@@ -143,8 +206,15 @@
             <div class="page__menu__titre">
               <h4>Tarte au citron meringuée</h4>
               <div class="page__menu__stitre">
-                <p class: page__menu p>Déstructurée</p>
-                <span class="page__menu__mony">23€</span>
+                <p>Déstructurée</p>
+                <div class="page__menu__mony">
+                  23€
+                  <div class="page__menu__confirmation">
+                    <div class="cercle">
+                      <i class="fa-solid fa-check"></i>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </li>
@@ -157,7 +227,7 @@
 
     <footer>
       <div class="footer">
-        <div class="footer-log" href="#">
+        <div class="footer-log">
           <img src="images/logo/ohmyfood.png" height="20" alt="Logo" />
         </div>
         <div>
