--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -76,7 +76,14 @@
               <h4>Foie gras de canard mi-cuit</h4>
               <div class="page__menu__stitre">
                 <p>Et ses copeaux de truffe noire</p>
-                <span class="page__menu__mony">20€</span>
+                <div class="page__menu__mony">
+                  20€
+                  <div class="page__menu__confirmation">
+                    <div class="cercle">
+                      <i class="fa-solid fa-check"></i>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </li>
@@ -85,7 +92,14 @@
               <h4>Oeuf au plat</h4>
               <div class="page__menu__stitre">
                 <p>Accompagné de sa ribambelle de légumes</p>
-                <span class="page__menu__mony">40€</span>
+                <div class="page__menu__mony">
+                  40€
+                  <div class="page__menu__confirmation">
+                    <div class="cercle">
+                      <i class="fa-solid fa-check"></i>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </li>
@@ -98,7 +112,14 @@
               <h4>Filet de boeuf aux herbes</h4>
               <div class="page__menu__stitre">
                 <p>Accompagné de sa ribambelle de légumes</p>
-                <span class="page__menu__mony">40€</span>
+                <div class="page__menu__mony">
+                  40€
+                  <div class="page__menu__confirmation">
+                    <div class="cercle">
+                      <i class="fa-solid fa-check"></i>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </li>
@@ -107,7 +128,14 @@
               <h4>Parmentier de queue de boeuf</h4>
               <div class="page__menu__stitre">
                 <p>À la truffe noire sur sa purée depanais</p>
-                <span class="page__menu__mony">35€</span>
+                <div class="page__menu__mony">
+                  35€
+                  <div class="page__menu__confirmation">
+                    <div class="cercle">
+                      <i class="fa-solid fa-check"></i>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </li>
@@ -116,7 +144,14 @@
               <h4>Filet de turbot</h4>
               <div class="page__menu__stitre">
                 <p>Aux agrumes</p>
-                <span class="page__menu__mony">44€</span>
+                <div class="page__menu__mony">
+                  44€
+                  <div class="page__menu__confirmation">
+                    <div class="cercle">
+                      <i class="fa-solid fa-check"></i>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </li>
@@ -130,7 +165,14 @@
               <h4>Paris-Brest</h4>
               <div class="page__menu__stitre">
                 <p>Revisité</p>
-                <span class="page__menu__mony">18€</span>
+                <div class="page__menu__mony">
+                  18€
+                  <div class="page__menu__confirmation">
+                    <div class="cercle">
+                      <i class="fa-solid fa-check"></i>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </li>
@@ -139,7 +181,14 @@
               <h4>Macaron au chocolat d'exception</h4>
               <div class="page__menu__stitre">
                 <p>Et glace à la vanille de Madagascar</p>
-                <span class="page__menu__mony">22€</span>
+                <div class="page__menu__mony">
+                  22€
+                  <div class="page__menu__confirmation">
+                    <div class="cercle">
+                      <i class="fa-solid fa-check"></i>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </li>
@@ -148,7 +197,14 @@
               <h4>Mousse au chocolat</h4>
               <div class="page__menu__stitre">
                 <p>Au piment d'Espelette et à la truffe noire</p>
-                <span class="page__menu__mony">23€</span>
+                <div class="page__menu__mony">
+                  23€
+                  <div class="page__menu__confirmation">
+                    <div class="cercle">
+                      <i class="fa-solid fa-check"></i>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </li>
@@ -161,7 +217,7 @@
     </main>
     <footer>
       <div class="footer">
-        <div class="footer-log" href="#">
+        <div class="footer-log">
           <img src="images/logo/ohmyfood.png" height="20" alt="Logo" />
         </div>
         <div>
