--- a/le-delice-des-sens.html
+++ b/le-delice-des-sens.html
@@ -57,7 +57,14 @@
               <h4>Tartare de thon</h4>
               <div class="page__menu__stitre">
                 <p>Assaisonné au yuzu</p>
-                <span class="page__menu__mony">25€</span>
+                <div class="page__menu__mony">
+                  25€
+                  <div class="page__menu__confirmation">
+                    <div class="cercle">
+                      <i class="fa-solid fa-check"></i>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </li>
@@ -66,7 +73,14 @@
               <h4>Bouchée de homard croustillant</h4>
               <div class="page__menu__stitre">
                 <p>Et sa farandole de petits légumes</p>
-                <span class="page__menu__mony">35€</span>
+                <div class="page__menu__mony">
+                  35€
+                  <div class="page__menu__confirmation">
+                    <div class="cercle">
+                      <i class="fa-solid fa-check"></i>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </li>
@@ -75,7 +89,14 @@
               <h4>Velouté de cèpes</h4>
               <div class="page__menu__stitre">
                 <p>Aux truffes</p>
-                <span class="page__menu__mony">20€</span>
+                <div class="page__menu__mony">
+                  20€
+                  <div class="page__menu__confirmation">
+                    <div class="cercle">
+                      <i class="fa-solid fa-check"></i>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </li>
@@ -87,7 +108,14 @@
               <h4>Poulet rôti aux herbes de Provence</h4>
               <div class="page__menu__stitre">
                 <p>Et sa crème de truffe</p>
-                <span class="page__menu__mony">40€</span>
+                <div class="page__menu__mony">
+                  40€
+                  <div class="page__menu__confirmation">
+                    <div class="cercle">
+                      <i class="fa-solid fa-check"></i>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </li>
@@ -96,7 +124,14 @@
               <h4>Langouste rôtie</h4>
               <div class="page__menu__stitre">
                 <p>Et ses légumes de saison</p>
-                <span class="page__menu__mony">35€</span>
+                <div class="page__menu__mony">
+                  35€
+                  <div class="page__menu__confirmation">
+                    <div class="cercle">
+                      <i class="fa-solid fa-check"></i>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </li>
@@ -105,7 +140,14 @@
               <h4>Côte de boeuf Angus</h4>
               <div class="page__menu__stitre">
                 <p>Et sa purée de panais</p>
-                <span class="page__menu__mony">44€</span>
+                <div class="page__menu__mony">
+                  44€
+                  <div class="page__menu__confirmation">
+                    <div class="cercle">
+                      <i class="fa-solid fa-check"></i>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </li>
@@ -118,7 +160,14 @@
               <h4>Farandole de desserts</h4>
               <div class="page__menu__stitre">
                 <p>Du chef</p>
-                <span class="page__menu__mony">18€</span>
+                <div class="page__menu__mony">
+                  18€
+                  <div class="page__menu__confirmation">
+                    <div class="cercle">
+                      <i class="fa-solid fa-check"></i>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </li>
@@ -127,7 +176,14 @@
               <h4>Crème brulée</h4>
               <div class="page__menu__stitre">
                 <p>Revisité</p>
-                <span class="page__menu__mony">22€</span>
+                <div class="page__menu__mony">
+                  22€
+                  <div class="page__menu__confirmation">
+                    <div class="cercle">
+                      <i class="fa-solid fa-check"></i>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </li>
@@ -136,7 +192,14 @@
               <h4>Tiramisu</h4>
               <div class="page__menu__stitre">
                 <p>À la noisette</p>
-                <span class="page__menu__mony">23€</span>
+                <div class="page__menu__mony">
+                  23€
+                  <div class="page__menu__confirmation">
+                    <div class="cercle">
+                      <i class="fa-solid fa-check"></i>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </li>
@@ -148,7 +211,7 @@
     </main>
     <footer>
       <div class="footer">
-        <div class="footer-log" href="#">
+        <div class="footer-log">
           <img src="images/logo/ohmyfood.png" height="20" alt="Logo" />
         </div>
         <div>
