--- a/index.html
+++ b/index.html
@@ -24,12 +24,9 @@
     <title>Accueil-ohmyfood</title>
   </head>
   <body>
+    <!--loader-->
     <div class="loader">
-      <div class="loader__conteneur">
-        <div class="loader__conteneur1"></div>
-        <div class="loader__conteneur2"></div>
-        <div class="loader__conteneur3"></div>
-      </div>
+      <div class="loader__spiner"></div>
     </div>
     <!-- Header -->
     <header>
