--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -248,7 +248,7 @@
           </a>
         </div>
         <div>
-          <a href="#">
+          <a href="http://rabah@ohmyfood.com">
             <span>Contact</span>
           </a>
         </div>
