--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -238,7 +238,7 @@
           </a>
         </div>
         <div>
-          <a href="#">
+          <a href="http://rabah@ohmyfood.com">
             <span>Contact</span>
           </a>
         </div>
