--- a/le-delice-des-sens.html
+++ b/le-delice-des-sens.html
@@ -232,7 +232,7 @@
           </a>
         </div>
         <div>
-          <a href="#">
+          <a href="http://rabah@ohmyfood.com">
             <span>Contact</span>
           </a>
         </div>
