--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <!---Fonctionnemnt-->
 
       <section class="fonctionnement">
-        <h2 class="fonctionnement">Fonctionnement</h2>
+        <h2 class="fonctionnement__titre">Fonctionnement</h2>
         <ul>
           <li class="fonctionnement__btn">
             <span class="fonctionnement__btn__chiffre"><i class="fa-solid fa-1"></i></span>
